--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookwritingcube",
+  "name": "texasbookpublishing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "bootstrap": "^5.2.3",
     "google-spreadsheet": "^3.3.0",
     "googleapis": "^118.0.0",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
